--- a/src/main/resources/templates/common/head.html
+++ b/src/main/resources/templates/common/head.html
@@ -16,9 +16,13 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
     />
     <!--共通CSS-->
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/common.css" />
     <!--各ページ別CSS-->
+    <link rel="stylesheet" href="/css/top.css" />
+    <link rel="stylesheet" href="/css/login.css" />
     <link rel="stylesheet" href="/css/add.css" />
+    <link rel="stylesheet" href="/css/secret.css" />
+    <link rel="stylesheet" href="/css/edit.css" />
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
