--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,8 +9,8 @@
     <h1 class="title">ログイン</h1>
     <form class="c-form mx-auto text-start" th:action="@{/login}" method="post">
       <!--メールアドレス-->
-      <label class="login_item">ユーザー名</label>
-      <input type="text" name="username" class="form-control login_form" />
+      <label class="login_item">メールアドレス</label>
+      <input type="text" name="email" class="form-control login_form" />
 
       <!--パスワード-->
       <label class="login_item">パスワード</label>
