[fix] ログアウトボタンのcssの修正
ログアウトボタンのホバー時の挙動の修正

--- a/bin/main/static/css/common.css
+++ b/bin/main/static/css/common.css
@@ -96,6 +96,9 @@ img {
   color: var(--font-color);
   text-align: center;
 }
+.c-btn--md--loggedIn:hover {
+  color: var(--font-color);
+}
 
 /***
  header
