--- a/bin/main/templates/index.html
+++ b/bin/main/templates/index.html
@@ -6,8 +6,8 @@
   layout:decorate="~{layout/layout}"
 >
   <section class="p-profile-app_top" th:fragment="content">
-    <div class="outer">
-      <div class="inner--l">
+    <div class="introduction_outer">
+      <div class="introduction_inner--l">
         <img
           class="profile_image"
           th:src="@{/img/round.png}"
@@ -17,12 +17,18 @@
           <span th:text="${username}"></span>さん
         </p>
       </div>
-      <div class="inner--r">
-        <h1 class="title" th:text="${title}"></h1>
-        <p class="profile_detail" th:text="${profile_detail}"></p>
+      <div class="introduction_inner--r">
+        <h1 class="title" th:text="${self_introduction}"></h1>
+        <p class="profile_detail" th:text="${profileDetail}"></p>
         <a href="#" class="link__btn--edit c-btn--lg--top"
           >自己紹介を編集する</a
         >
+      </div>
+    </div>
+    <div class="chart_outer">
+      <div class="chart_inner">
+        <h1 class="title" th:text="${learning_chart}"></h1>
+        <a href="#" class="link__btn--edit c-btn--md--chart">編集する</a>
       </div>
     </div>
   </section>
