--- a/src/main/resources/static/css/top.css
+++ b/src/main/resources/static/css/top.css
@@ -4,13 +4,17 @@
  Topページ
 ***/
 
-.p-profile-app_top .outer {
+/*** 
+  p-profile-app_top introduction_outer
+***/
+.p-profile-app_top .introduction_outer {
   margin-inline: auto;
   max-width: 960px;
+  margin-bottom: 80px;
   display: flex;
   column-gap: 80px;
 }
-.p-profile-app_top .inner--r {
+.p-profile-app_top .introduction_inner--r {
   max-width: 520px;
   margin-top: 52px;
   text-align: left;
@@ -30,7 +34,7 @@
 .p-profile-app_top .link__btn--edit {
   display: inline-block;
 }
-.p-profile-app_top .inner--l {
+.p-profile-app_top .introduction_inner--l {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -40,4 +44,19 @@
 }
 .p-profile-app_top .username {
   font-size: 2rem;
+}
+
+/*** 
+  p-profile-app_top chart_outer 
+***/
+.p-profile-app_top .chart_outer {
+  margin-inline: auto;
+  max-width: 960px;
+}
+.p-profile-app_top .chart_inner {
+  margin-inline: auto;
+  max-width: 400px;
+}
+.p-profile-app_top .chart_inner .title {
+  margin-bottom: 40px;
 }
