--- a/bin/main/static/css/top.css
+++ b/bin/main/static/css/top.css
@@ -30,6 +30,7 @@
   font-size: var(--fs-3);
   line-height: 1.5;
   margin-bottom: 32px;
+  line-break: anywhere;
 }
 .p-profile-app_top .link__btn--edit {
   display: inline-block;
@@ -40,6 +41,9 @@
   align-items: center;
 }
 .p-profile-app_top .profile_image {
+  width: 360px;
+  height: 360px;
+  border-radius: 50%;
   margin-bottom: 10px;
 }
 .p-profile-app_top .username {
