--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,8 +10,9 @@
       <div class="introduction_inner--l">
         <img
           class="profile_image"
-          th:src="@{/img/round.png}"
           alt="自己紹介画像"
+          th:if="${isLoggedIn}"
+          th:src="@{${userImage}}"
         />
         <p class="username" th:if="${isLoggedIn}">
           <span th:text="${username}"></span>さん
@@ -20,7 +21,7 @@
       <div class="introduction_inner--r">
         <h1 class="title" th:text="${self_introduction}"></h1>
         <p class="profile_detail" th:text="${profileDetail}"></p>
-        <a href="#" class="link__btn--edit c-btn--lg--top"
+        <a th:href="@{/user/edit}" class="link__btn--edit c-btn--lg--top"
           >自己紹介を編集する</a
         >
       </div>
