[fix]自己紹介編集機能の修正
・画像ファイル選択時にファイル名を表示
・edit.html、edit.cssを修正。
・fileUpload.jsを追加

--- a/bin/main/static/css/common.css
+++ b/bin/main/static/css/common.css
@@ -168,6 +168,11 @@ img {
   opacity: 0;
   cursor: pointer;
 }
+.file-name-text {
+  margin-left: 10px;
+  font-size: 1.4rem;
+  color: var(--font-color);
+}
 
 /***
  header
