--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -168,6 +168,11 @@ img {
   opacity: 0;
   cursor: pointer;
 }
+.file-name-text {
+  margin-left: 10px;
+  font-size: 1.4rem;
+  color: var(--font-color);
+}
 
 /***
  header
