--- a/src/main/resources/templates/common/head.html
+++ b/src/main/resources/templates/common/head.html
@@ -29,6 +29,8 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <!--各ページ別JS-->
+    <script src="/js/fileUpload.js" defer></script>
     <!--Bootstrap/JS-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
