--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -47,10 +47,12 @@
               </button>
               <input
                 class="file-input"
+                id="profile-file"
                 type="file"
                 name="imageFile"
                 accept="images/*"
               />
+              <span id="file-name" class="file-name">選択されていません</span>
             </div>
           </td>
         </tr>
