--- a/bin/main/templates/user/edit.html
+++ b/bin/main/templates/user/edit.html
@@ -52,7 +52,7 @@
                 name="imageFile"
                 accept="images/*"
               />
-              <span id="file-name" class="file-name">選択されていません</span>
+              <span id="file-name" class="file-name"></span>
             </div>
           </td>
         </tr>
