--- a/src/main/resources/templates/common/head.html
+++ b/src/main/resources/templates/common/head.html
@@ -7,7 +7,7 @@
     <!--スマートフォン・デバイス対応-->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--タイトル-->
-    <title th:text="${title}"></title>
+    <title th:text="${pageTitle}"></title>
     <!--resetcss-->
     <link rel="stylesheet" href="/css/reset.css" />
     <!--Bootstrap/CSS-->
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="/css/login.css" />
     <link rel="stylesheet" href="/css/add.css" />
     <link rel="stylesheet" href="/css/edit.css" />
+    <link rel="stylesheet" href="/css/list.css" />
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -31,6 +32,7 @@
     />
     <!--各ページ別JS-->
     <script src="/js/fileUpload.js" defer></script>
+    <script src="/js/pullDown.js" defer></script>
     <!--Bootstrap/JS-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
