--- a/bin/main/templates/learning/list.html
+++ b/bin/main/templates/learning/list.html
@@ -47,7 +47,7 @@
                 <input
                   class="c-btn--md--item--add"
                   type="submit"
-                  value="項目を追加"
+                  value="項目を追加する"
                   th:formaction="@{/learning/new}"
                 />
               </div>
